# dynamixel_current_2port

./: README.md  alias.txt
devel/: .catkin  setup.sh
devel/include/dynamixel_current_2port/: Select_Motion.h  Select_MotionRequest.h  Select_MotionResponse.h  Turn_Angle.h  Turn_AngleRequest.h  Turn_AngleResponse.h
devel/lib/dynamixel_current_2port/: Move_decision_node  dynamixel_current_2port
devel/lib/img_processing/: img_processing
devel/lib/pkgconfig/: dynamixel_current_2port.pc  img_processing.pc
devel/lib/python3/dist-packages/dynamixel_current_2port/srv/: _Select_Motion.py  _Turn_Angle.py  __init__.py
devel/share/common-lisp/ros/dynamixel_current_2port/srv/: Select_Motion.lisp  Turn_Angle.lisp  _package.lisp  _package_Select_Motion.lisp  _package_Turn_Angle.lisp  dynamixel_current_2port-srv.asd
devel/share/dynamixel_current_2port/cmake/: dynamixel_current_2port-msg-extras.cmake  dynamixel_current_2port-msg-paths.cmake  dynamixel_current_2portConfig.cmake
devel/share/gennodejs/ros/dynamixel_current_2port/srv/: Select_Motion.js  Turn_Angle.js  _index.js
devel/share/img_processing/cmake/: img_processingConfig.cmake
devel/share/roseus/ros/dynamixel_current_2port/: manifest.l
devel/share/roseus/ros/dynamixel_current_2port/srv/: Select_Motion.l  Turn_Angle.l
dynamixel_current_2port/: CMakeLists.txt  default.gpfl  package.xml  realsense.gpfl
dynamixel_current_2port/include/: IMG_PROC.hpp  Move_decision.hpp  Walkingpattern_generator.hpp  callback.hpp  dynamixel.hpp  img_proc.hpp  sensor.hpp
dynamixel_current_2port/launch/: Move_decision.launch
dynamixel_current_2port/src/: IMG_PROC.cpp  Move_decision.cpp  Move_decision2.cpp  Move_decision3.cpp  Move_decision_node.cpp  Sensor_node.cpp  Walkingpattern_generator.cc  callback.cpp  dynamixel.cpp  img_proc.cpp  img_proc2.cpp  main.cpp  main_2.cpp  sensor.cpp
dynamixel_current_2port/srv/: Select_Motion.srv  SendMotion.srv
src/dynamixel_current_2port/: CMakeLists.txt  package.xml
src/dynamixel_current_2port/include/: Move_decision.hpp  Walkingpattern_generator.hpp  callback.hpp  dynamixel.hpp  dynamixel_controller.hpp  dynamixel_current_2port.hpp  sensor.hpp
src/dynamixel_current_2port/launch/: dynamixel_current_2port.launch
src/dynamixel_current_2port/src/: Move_decision.cpp  Move_decision_node.cpp  Walkingpattern_generator.cc  callback.cpp  dynamixel.cpp  dynamixel_controller.cpp  dynamixel_current_2port.cpp  fsr_ux_420_short.ino  main.cpp  sensor.cpp
src/dynamixel_current_2port/srv/: Select_Motion.srv  Turn_Angle.srv
